--- a/build.gradle
+++ b/build.gradle
@@ -49,6 +49,7 @@ project(":core") {
         implementation "com.badlogicgames.gdx:gdx-freetype:$gdxVersion"
         implementation 'com.google.code.gson:gson:2.8.2'
         implementation "com.kotcrab.vis:vis-ui:$visuiVersion"
+        implementation "com.badlogicgames.gdx:gdx-freetype:$gdxVersion"
     }
 }
 
