--- a/android/build.gradle
+++ b/android/build.gradle
@@ -27,7 +27,7 @@ android {
         minSdkVersion 9
         targetSdkVersion 27
         versionCode 1
-        versionName "1.0"
+        versionName "1.0.0+official"
     }
     buildTypes {
         release {
